Overflow on newly added BAW section in Windows due to different fonts being used vs. Linux - need to embed custom fonts into website in near future to prevent this sort of thing...

--- a/static/style/andoverarchers.css
+++ b/static/style/andoverarchers.css
@@ -196,6 +196,7 @@
 		{
 		padding-right: 15px;
 		margin-left: 15px;
+		font-size: 90%;
 		}
 		
 		#abw-banner
